# Greyvie

./: .env.example  .gitignore  .taskmasterconfig  README.md  pytest.ini
projects/services/bg-ingest/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  METRICS.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
projects/services/bg-ingest/.github/workflows/: ci.yml
projects/services/bg-ingest/bg_ingest/: __init__.py  main.py
projects/services/bg-ingest/bg_ingest/auth/: __init__.py
projects/services/bg-ingest/bg_ingest/data/: __init__.py
projects/services/bg-ingest/bg_ingest/services/: __init__.py
projects/services/bg-ingest/bg_ingest/utils/: config.py
projects/services/bg-ingest/docs/: RATE_LIMITING_DISTRIBUTED.md  data_validation_pipeline.md  key_manager.md  manual_redaction_testing.md  secrets_integration.md
projects/services/bg-ingest/scripts/: create_dynamodb_tables.py  reencrypt_data.py  rotate_keys.py
projects/services/bg-ingest/src/: main.py  metrics.py
projects/services/bg-ingest/src/api/: __init__.py  middleware.py  readings.py
projects/services/bg-ingest/src/auth/: __init__.py  circuit_breaker.py  client.py  dexcom_client.py  models.py  oauth.py  password_verification.py  pkce.py  rate_limiter.py  tokens.py
projects/services/bg-ingest/src/data/: __init__.py  dynamodb.py  glucose_repository.py  sync_repository.py  token_repository.py
projects/services/bg-ingest/src/models/: __init__.py  glucose.py  sync.py  tokens.py
projects/services/bg-ingest/src/utils/: batch_processing.py  config.py  error_handling.py  key_manager.py  logging_utils.py  normalization.py  password_utils.py  pipeline.py  secrets.py  validation.py
projects/services/bg-ingest/tests/: __init__.py  conftest.py  test_batch_processing.py  test_error_handling.py  test_normalization.py  test_pipeline.py  test_validation.py
projects/services/bg-ingest/tests/api/: __init__.py  test_jwt_auth.py  test_logging_integration.py  test_main.py  test_metrics.py  test_middleware.py  test_rate_limiter.py  test_readings.py  test_redact_middleware.py
projects/services/bg-ingest/tests/auth/: __init__.py  test_circuit_breaker.py  test_client.py  test_dexcom_client.py  test_oauth.py  test_password_verification.py  test_pkce.py  test_tokens.py
projects/services/bg-ingest/tests/data/: test_dynamodb.py
projects/services/bg-ingest/tests/models/: test_models.py
projects/services/bg-ingest/tests/scripts/: test_reencrypt_data.py  test_rotate_keys.py
projects/services/bg-ingest/tests/utils/: test_config.py  test_key_manager.py  (+1 more)
(+45 files in other folders)
